# colt-lang

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-linux-arm.yml  cmake-linux-x86_64.yml  cmake-windows-x86_64.yml  cmake.yml  codeql-analysis.yml  codeql.yml  scorecard.yml
colt/src/: main.c
colt/src/byte-code/: byte_code.c  byte_code.h  byte_code_generator.c  byte_code_generator.h  chunk.c  chunk.h  disassemble.c  disassemble.h
colt/src/lang/: ast.c  ast.h  expr.c  expr.h  option.h  scan_option.h  scanner.c  scanner.h  token.c  token.h  type.h
colt/src/structs/: struct_string.c  struct_string.h  struct_table.c  struct_table.h
colt/src/type/: colt_floating_value.h  colt_integer_value.h  colt_string_value.h  colti_floating_value.h  colti_integer_value.h  colti_string_value.h  type.c  type.h
colt/src/util/: common.h  console_colors.h  memory.c  memory.h  parse_args.c  parse_args.h  precomph.h
colt/src/values/: colti_integer_value.h  colti_string_value.h
colt/src/vm/: repl.c  repl.h  stack_based_vm.c  stack_based_vm.h
colti/src/: main.c
colti/src/byte-code/: byte_code.c  byte_code.cpp  byte_code.h  byte_code_generator.c  byte_code_generator.h  chunk.c  chunk.h  disassemble.c  disassemble.h
colti/src/lang/: ast.c  ast.h  expr.c  expr.h  scanner.c  scanner.h  token.c  token.h  type.h
colti/src/structs/: struct_string.c  struct_string.h
colti/src/util/: common.h  parse_args.c  parse_args.cpp  parse_args.h  precomph.h
colti/src/values/: colti_floating_value.h  colti_integer_value.h
colti/src/vm/: stack_based_vm.c  stack_based_vm.cpp  stack_based_vm.h
docs/detailed_docs/: Chunk.md  CodingStyle.md
plugins/: generate_empty_plugin.py
plugins/EmptyPlugin/src/: main.cpp
resources/cmake/: cmake_colt_config.in
resources/doxygen/: Doxyfile.in
resources/plugins/EmptyPlugin/: CMakeLists.txt
resources/tests/: condition.ct  err_decl_global.ct  err_decl_local.ct  global_var.ct  local_var.ct  static_print.ct
resources/tests/features/: fea_lstring_dict.ct  fea_valid_conv.ct
resources/tests/warnings/: warn_lossy.ct  warn_sign_mis.ct  warn_unused.ct
src/: README.md  colt_pch.h  main.cpp
src/frontend/: target_info.h
src/frontend/ast/: globals.h
src/frontend/err/: clt_diag_parser.h  compiler_limits.h  composable_reporter.h  error_reporter.h  io_reporter.cpp  io_reporter.h  warn.h
src/frontend/lex/: lex.cpp  lex.h  lexemes.h  lexemes_context.h
src/util/: args.h  tracing.h  true_main.cpp
src/util/ffi/: ffi_caller.h  plugin_loader.cpp  plugin_loader.h
test/: README.md  test_run.cpp
test/util/: test_ffi.cpp
tests/: Testing.md
tests/errors/: err_assign.ct  err_const_global.ct  err_const_local.ct  err_decl_global.ct  err_decl_local.ct
tests/features/: fea_bool_and_and.ct  fea_bool_or_or.ct  fea_comparison.ct  fea_loop_continue.ct  fea_loop_while.ct
tests/warnings/: warn_implicit.ct  warn_sign_mis.ct
